--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.3",
+    "dotenv": "^16.0.3",
     "firebase": "^9.17.1",
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-google-button": "^0.7.2",
     "react-modal-image": "^2.6.0",
+    "react-phone-number-input": "^3.2.19",
     "react-responsive-modal": "^6.4.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
